home page progess

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
 @import url('https://fonts.cdnfonts.com/css/dinpro-bold');
 @import url('https://cdn.jsdelivr.net/npm/gotham-fonts@1.0.3/css/gotham-rounded.min.css');
+@import url('https://fonts.googleapis.com/css?family=Inter');
+
 
